projects/vb6parse/snapshots/syntax/library/statements/error/error_assignment_with_space.snap
---
source: projects/vb6parse/src/syntax/library/statements/runtime_state/error.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: SubStatement
      children:
        - kind: SubKeyword
          text: Sub
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: Test
        - kind: ParameterList
          children:
            - kind: LeftParenthesis
              text: (
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: Whitespace
              text: "    "
            - kind: AssignmentStatement
              children:
                - kind: IdentifierExpression
                  children:
                    - kind: ErrorKeyword
                      text: Error
                - kind: Whitespace
                  text: "  "
                - kind: EqualityOperator
                  text: "="
                - kind: Whitespace
                  text: "  "
                - kind: IdentifierExpression
                  children:
                    - kind: Identifier
                      text: errorObject
                - kind: Newline
                  text: "\n"
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: SubKeyword
          text: Sub
        - kind: Newline
          text: "\n"
