projects/vb6parse/snapshots/syntax/library/statements/error/error_preserves_whitespace.snap
---
source: projects/vb6parse/src/syntax/library/statements/runtime_state/error.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Whitespace
      text: "    "
    - kind: ErrorStatement
      children:
        - kind: ErrorKeyword
          text: Error
        - kind: Whitespace
          text: "    "
        - kind: NumericLiteralExpression
          children:
            - kind: IntegerLiteral
              text: "11"
    - kind: Whitespace
      text: "    "
    - kind: Newline
      text: "\n"
